kyverno-tests/fixtures/mutate-runtime-class/statefulset-outside-namespace.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-outside-namespace
  namespace: other-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  serviceName: test-service
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-container
        image: nginx:latest
