kyverno-tests/fixtures/prevent-control-plane-tolerations/deployment-allowed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-allowed
  namespace: app-namespace
spec:
  selector:
    matchLabels:
      app: deployment-allowed
  template:
    metadata:
      labels:
        app: deployment-allowed
    spec:
      containers:
        - name: nginx
          image: nginx
