kyverno-tests/fixtures/prevent-control-plane-tolerations/deployment-denied.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-denied
  namespace: app-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deployment-denied
  template:
    metadata:
      labels:
        app: deployment-denied
    spec:
      containers:
        - name: nginx
          image: nginx
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
