kyverno-tests/fixtures/prevent-control-plane-tolerations/job-allowed.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: job-allowed
  namespace: app-namespace
spec:
  completions: 1
  parallelism: 1
  template:
    metadata:
      labels:
        app: job-allowed
    spec:
      restartPolicy: OnFailure
      containers:
        - name: nginx
          image: nginx
          command: ["echo", "Hello from job"]
