kyverno-tests/fixtures/prevent-control-plane-tolerations/pod-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-allowed
  namespace: app-namespace
spec:
  containers:
    - name: nginx
      image: nginx
