kyverno-tests/fixtures/prevent-control-plane-tolerations/pod-denied.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-denied
  namespace: app-namespace
spec:
  containers:
    - name: nginx
      image: nginx
  tolerations:
    - key: "node-role.kubernetes.io/control-plane"
      operator: "Exists"
