manifests/blue-team/kyverno/mutate-readonly-fs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-readonly-fs
  annotations:
    policies.kyverno.io/title: Mutate Read-Only Filesystem
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Deployment, StatefulSet
    policies.kyverno.io/description: >-
      This policy mutates Deployments and StatefulSets to use read-only filesystems by setting securityContext.readOnlyRootFilesystem to true for all containers.
spec:
  rules:
  - name: set-readonly-fs
    match:
      resources:
        kinds:
        - Pod
        namespaces:
        - app-namespace
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - (name): "*"
            securityContext:
              readOnlyRootFilesystem: true
          initContainers:
          - (name): "*"
            securityContext:
              readOnlyRootFilesystem: true
